--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -383,6 +383,9 @@
   }
   .container {
     width: 100%;
+    @media (width >= 30rem) {
+      max-width: 30rem;
+    }
     @media (width >= 40rem) {
       max-width: 40rem;
     }
@@ -2600,8 +2603,11 @@
 }
 .media-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: calc(var(--spacing) * 4);
+  @media (width >= 30rem) {
+    grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+  }
 }
 .toast-error {
   border-color: var(--color-red-600);
